--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -18,33 +18,44 @@ In Section \ref{sec:external-wins} I discuss the situation in which the external
 
 From these two proposals follows that it is impossible to have third pattern, which is indeed also not attested. When the external case wins over the internal one, there is a situation in which the external case could delete the internal one. So, it is impossible to have the second option but not the first one.
 
-\section{Internal case wins}\label{sec:internal-wins}
 
-This section discusses the situation in which the internal case wins the case competition and the relative pronoun surfaces in the internal case. These examples are grammatical in languages that allow internal-and-external languages, such as Gothic and Old High German, and also in internal-only languages, such as Modern German.
+\section{The idea}
 
-In \ref{ex:int} I give examples from all three languages in which the internal accusative case wins the case competition over the external nominative, and the relative pronoun appears in the more complex internal accusative case.
+what criteria does the committee use? ideally, something independently observable within the language.
 
-\ex.\label{ex:int}
-\ag. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+if int contains ext, int is approved
+if ext contains int, ext is approved
+
+
+\section{The internal and external element}
+
+what are they? we see only one: the relative pronoun. however, we really need to elements! because we need to compare internal and external
+
+you can see this very very well in modern german: it does not suffice to let the relative pronoun surfaces in the internal case. we always need a way to refer to the more complex case.
+
+
+
+The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-int}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
+
+\ex.\label{ex:mg-internal}
+\ag. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-wen}
+\bg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int}
-\bg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
- \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
- `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-int}
-\bg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-int}
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int-rep}
 
-In this section, I set up the system in Modern German. Once I showed how the pattern is derived for Modern German, I show that the same mechanisms work for Gothic and Old High German.
+The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-int} is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
-In the situation described in this section, the relative pronoun appears in the internal case. This seems to suggest that the relative pronoun is syntactically part of the relative clause.
+\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. \ref{ex:mg-int} is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
 
-In Section \ref{sec:rel-clause} I give independent evidence from extraposition that the relative pronoun in Modern German indeed is part of the relative clause. Section \ref{sec:two-open-issues} introduces two issues that arise when assuming that there is nothing more than a relative pronoun in the relative clause. The first issue is that there is no carrier for the external case. The second one is that there is no way to distinguish between languages like Modern German and Polish, which does not allow for any case conflicts in its headless relatives. In Section \ref{sec:external-head} I show that both these issues are resolved by introducing an external head. The existence of this element is independently motivated by languages that overtly show it.
-Section \ref{sec:features-head} I show that this element contains a subset of the features that the relative pronoun contains. Section \ref{sec:position-head} places the external head in a syntactic position from which it is c-commanded by the relative pronoun and it can receive case from the main clause predicate. In \ref{sec:proposal-internal-wins}, I present my proposal for the situation in which the internal case wins in Modern German, Gothic and Old High German. If the case features of external head form a subset of the case features of the relative pronoun, the relative pronoun can delete the external head.
+In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun needs to have access to the main clause case. I propose that this can be achieved by introducing an external head to the relative clause. In Section X I show how this solves the issue.
 
-\subsection{Relative pronouns in the relative clause}\label{sec:rel-clause}
+I introduce two elements: the relative pronoun, which is always the internal element, and the external element, which contains a subset of the features of the internal element
 
-In this section I show that the relative pronoun in Modern German headless relatives is part of the relative clause. The evidence comes from extraposition (first given by \citealt{groos1981}). In Modern German, it is possible to extrapose a CP (a clause), but not a DP (a noun phrase). In this section I first show that Modern German CPs can be extraposed and DPs cannot. I illustrate how that the same pattern appears in headed relative clauses: the relative clause can be extraposed, but not including the head of the relative clause. Headless relative pattern with their headless counterparts: relative clauses can be extraposed including their relative pronoun. This indicates that the relative pronoun is part of the relative clause.
+
+
+\subsection{The (relative pronoun as) internal element}
 
 The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose a CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. It can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
 
@@ -96,121 +107,18 @@ Jan has eaten what he cooked has\\
 Jan has what eaten he cooked has\\
 `Jan has eaten what he cooked.'\label{ex:extra-headless-no-rel}
 
-In conclusion, extraposition facts show, independently of the case facts, that the relative pronoun in Modern German is syntactically part of the relative clause.
+In conclusion, extraposition facts show, that the relative pronoun in Modern German is syntactically part of the relative clause.
 
 
-\subsection{Two open issues}\label{sec:two-open-issues}
+\subsection{The external element}
 
-The previous section showed that the relative pronoun in a Modern German headless relative is syntactically part of the relative clause. The analysis is as follows: the relative pronoun (part of the relative clause) takes the case of the predicate in the relative clause. The sentence is grammatical if the external case is contained in the relative clause case.
-
-\ex.
-\begin{forest} boom
- [CP, s sep=20mm
-    [\ac{acc}P,
-    tikz={
-    \node[label=below:\tit{wen},
-    draw,circle,
-    scale=0.85,
-    fit to=tree]{};
-    }
-        [\tsc{f2}]
-        [\tsc{nomP}
-            [\tsc{f1}]
-            [XP
-                [\phantom{xxx}, roof]
-            ]
-        ]
-    ]
-    [VP
-        [\tit{Maria mag}, roof]
-    ]
- ]
-\end{forest}
-
-Now there are two problems, two subjects that need more said about them.
-
-(1) An important requirement here is that the external case is less complex than the internal one! Is this part of the derivation as well? Because it is clear that somehow reference needs to be made to it. So far we have this picture: no external case yet. %First, normally there is a single DP connected to a predicate. Here there is a single DP, the relative pronoun, that is connected to both of the predicates. Or, it is first connected to the clause it is in, but then there is this `secondary' relationship.
-
-(2) why do not all languages behave like Modern German? Where is space for differences between languages? For Gothic and Old High German we are still ok, because we also allow for this type of case attraction there. But how about a language like Polish, that does not allow for it? How can this type of case attraction be excluded?
-
-%(2) if we follow this logic, to show this type of case competition? (OHG and Gothic also allow this one, so that is fine, they just allow something else in addition, and I'll get back to that later) But there are languages like Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
-
-In this section I first lay out these two problems in more detail. The next section introduces a head, external to the relative clause, that solves both these problems.
+Like I said, we need an element here. But where and how? Well, there are actually languages that show we have it!
+The existence of this element is independently motivated by languages that overtly show it.
+I show that this element contains a subset of the features that the relative pronoun contains.
+I placee the external head in a syntactic position from which it is c-commanded by the relative pronoun and it can receive case from the main clause predicate.
 
 
-\subsubsection{How to get access to external case}
-
-The first open issue with the analysis in X is how the relative pronoun gets access to the external case.
-
-The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-int}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
-
-\ex.\label{ex:mg-internal}
-\ag. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-wen}
-\bg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
- we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int-rep}
-
-The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-int} is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
-
-\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. \ref{ex:mg-int} is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
-
-In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun needs to have access to the main clause case. I propose that this can be achieved by introducing an external head to the relative clause. In Section X I show how this solves the issue.
-
-
-\subsubsection{How to disallow the pattern}
-
-The second issue with the analysis in X is how to disallow the Modern German pattern for other languages.
-
-In Chapter X I showed that there are also languages that do not show case competition. Polish is an example of a language that only allows for headless relatives when the internal and the external case match (or when the relative pronoun is syncretic for these cases). The language is so-called `strictly matching'.
-
-\ex.
-\ag. *Jan ufa kogokolkwiek wpuścil do domu.\\
-Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
-`Jan trusts whoever he let into the house.'
-\bg. *Jan ufa komukolkwiek wpuścil do domu.\\
-Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
-`Jan trusts whoever he let into the house.'
-
-\ex.
-\ag. *Jan lubi kogokolkwiek dokucza.\\
-Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
-`Jan likes whoever he teases.'
-\bg. *Jan lubi komukolkwiek dokucza.\\
-Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
-`Jan likes whoever he teases.'
-
-Consider the Polish and German example below.
-
-\ex.
-\ag. *Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
-Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease.3\tsc{sg}\scsub{[dat]}\\
-`Jan likes whoever he teases.'\flushfill{Polish}\label{ex:polish-acc-dat-rep}
-\bg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-disallow}
-
-Why is the German sentence grammatical and the Polish one not? I do not want to say that one language allows for case competition and the other one does not. Instead, the difference follows from something within the language.
-
-On the surface forms of these headless relatives, there is nothing that differs between them. However, a closely related construction, the light-headed relative, does show a difference between the languages.
-
-I propose that headless relatives are derived from a construction that contains an external head. This allows for making a distinction between languages that show case competition (like Modern German) and languages that do not (like Polish). In Section X I show how this solves the issue.
-
-
-
-\subsection{Solution: an external head}\label{sec:external-head}
-
-I propose a single answer to both issues raised in Section X: relative clauses in headless relatives have an external heads. So even though we say these relatives are headless relatives, at some point in the derivation there actually is a head of the relative clause.
-
-This is the head of the relative clause, and it is deleted in Modern German (as long as it contains all cases of the relative pronoun). This external head in Polish is not deleted, because it does not add any extra definiteness or indefiniteness. Before I show how this works exactly, I show some independent evidence for assuming that there is this head.
-
-
-\subsubsection{Languages with two heads}
-
-There is also independent evidence for this head, namely from languages that actually let the head surface.
-
-Here there are two identical copies of the head, one inside the relative clause, one outside of the relative clause.
+There is independent evidence for this head, namely from languages that actually let the head surface. Here there are two identical copies of the head, one inside the relative clause, one outside of the relative clause.
 
 \exg. [\tbf{doü} adiyano-no] \tbf{doü} deyalukhe\\
  sago give.3\tsc{pl}.\tsc{nonfut}-\tsc{conn} sago finished.\tsc{ajd}\\
@@ -228,47 +136,7 @@ So, we have the head. Translating this to relative pronouns, there is the relati
 
 Let me now show how this solves the external case problems and how it helps exclude some languages.
 
-
-\subsubsection{Getting access to external case}
-
---give here a table with on one side the tree repeated and on the other side the head, with XP at the bottom?--
-split the relative pronoun up in the w part and the other part, because this is already the subset relation
-
-Now this accusative here can license an external nominative case. The idea is: it is inside this accusative already. We understand why it could not license a dative: \tsc{f3} is not contained in the accusative.
-
-
-\subsubsection{Disallowing the pattern}
-
-\ex. Polish light-headed relative
-
-\ex. German light-headed relative
-\a. das was
-\b. das das
-
-In German a sense of definiteness is added, because of the \tsc{d} in \tit{das}. In Polish that is not the case, because \tit{to} in Polish does not necessarily have definiteness. Evidence for that for Czech comes from Radek. I take that to exist for Polish as well.
-
-So, Polish can involve a second head (the light head) without changing the meaning of the construction. German cannot. Now it is important to note the timing of this `repair' strategy. This has to namely be in the course of the derivation, it cannot be something that is inserted `afterwards'. What I mean with this is that there needs to be an element (which is going to become the light head in Polish but not in German) that is available during the derivation. Depending on what this element looks like, Polish shows the light head.
-
-\ex. Polish
-\a. rel clause with \tsc{acc}
-\b. other element: \tsc{nom}
-\b. t, c
-
-\ex. German
-\a. rel clause with \tsc{acc}
-\b. other element: \tsc{nom}
-\b. w (because d would change the meaning)
-
-So, Polish has an `out', which German does not have.
-
-What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
-
-
-\subsection{Featural content of the head}\label{sec:features-head}
-
 indefinite noun, as cinque and the content of the external head visible in some languages
-
-\subsection{Syntactic position of external head}\label{sec:position-head}
 
 Where is this head in the syntactic structure?
 
@@ -277,6 +145,8 @@ Where is this head in the syntactic structure?
     \item Somewhere where it can receive case from the main clause
     \item Where it normally is in SOV languages (does the thing in Polish move because it is a svo language?)
   \end{itemize}
+
+x
 
 
 So this works.
@@ -368,39 +238,437 @@ But here it does not.
 ]
 \end{forest}
 
+x
 
-\section{The proposal}\label{sec:proposal-internal-wins}
+\section{Deriving the patterns}
 
-\tit{as} is deleted because it cannot surface on its own? why not?
+\subsection{Deriving internal-and-external}
 
-what is this deletion to begin with?
+Old High German
 
-Finnish is like German because its light-headed relatives also add some definiteness.
+featural content of relative pronoun
+
+\begin{table}[H]\label{tbl:paradigmohg}
+ \center
+ \caption {Relative pronouns in headless relatives in Old High German}
+  \begin{tabular}{cccc}
+  \toprule
+       & \ac{n}.\ac{sg} & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg} \\
+        \cmidrule{2-4}
+  \ac{nom} & d-aȥ           & d-ër          & d-iu      \\
+  \ac{acc} & d-aȥ        & d-ën      & d-ea/-ia/(-ie) \\
+  \ac{dat} & d-ëmu/-ëmo     & d-ëmu/-ëmo   & d-ëru/-ëro   \\
+  \bottomrule
+         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl}   & \ac{f}.\ac{pl} \\
+          \cmidrule{2-4}
+    \ac{nom}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{acc}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{dat}  & d-ēm/-ēn      &  d-ēm/-ēn        & d-ēm/-ēn        \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
+featural content of external head
+
+\ex. \tbf{Spellout Algorithm:}\\
+Merge F and \label{ex:spellout}
+ \a. Spell out FP.
+ \b. If (a) fails, attempt movement of the spec of the complement of \tsc{f}, and retry (a).
+ \b. If (b) fails, move the complement of \tsc{f}, and retry (a).
+
+When a new match is found, it overrides previous spellouts.
+
+\ex. \tbf{Cyclic Override} \citep{starke2018}:\\
+Lexicalisation at a node XP overrides any previous match at a phrase contained in XP.
+
+If the spellout procedure in \ref{ex:spellout} fails, backtracking takes place.
+
+\ex. \tbf{Backtracking} \citep{starke2018}:\\
+When spellout fails, go back to the previous cycle, and try the next option for that cycle.\label{ex:backtracking}
+
+If backtracking also does not help, a specifier is constructed.
+
+\ex. \tbf{Spec Formation} \citep{starke2018}:\\
+If Merge F has failed to spell out (even after backtracking), try to spawn a new derivation providing the feature F and merge that with the current derivation, projecting the feature F at the top node.\label{ex:specformation}
+
+\ex. Merge F, Move XP, Merge XP
+
+show how internal-wins works
+show how external-wins works
+
+\subsection{Deriving internal-only}
+
+Modern German
+
+featural content of relative pronoun
+
+\begin{table}[H]
+ \center
+ \caption {Relative pronouns in headless relatives in Modern German}
+  \begin{tabular}{ccc}
+  \toprule
+       & \ac{inan} & \ac{an} \\
+        \cmidrule{2-3}
+    \ac{nom}  & w-as     & w-er    \\
+    \ac{acc}  & w-as     & w-en   \\
+    \ac{dat}  & -      & w-em    \\
+  \bottomrule
+  \end{tabular}
+\end{table}
+
+
+featural content of external head
+
+
+So German relative pronoun:
+
+\begin{forest} boom
+[\tsc{relP}, s sep=20mm
+    [\tit{w}, roof]
+    [, s sep=30mm
+        [\tsc{deix}P,
+        tikz={
+        \node[label=below:\tit{e},
+        draw,circle,
+        scale=0.875,
+        fit to=tree]{};
+        }
+            [\tsc{deix}]
+            [\tsc{refP}
+                [\tsc{ref2}]
+                [\tsc{ref1}]
+            ]
+        ]
+        [\tsc{acc}P,
+        tikz={
+        \node[label=below:\tit{n},
+        draw,circle,
+        scale=0.925,
+        fit to=tree]{};
+        }
+            [\tsc{f2}]
+            [\tsc{nom}P
+                [\tsc{f1}]
+                [\tsc{num}P
+                    [\tsc{num}]
+                    [\tsc{m}P
+                        [\tsc{m}]
+                        [\tsc{n}P
+                            [\tsc{n}]
+                            [\tsc{persP}
+                                [\tsc{pers}]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+and German head:
+
+\begin{forest} boom
+[, s sep=30mm
+    [\tsc{deix}P,
+    tikz={
+    \node[label=below:\tit{e},
+    draw,circle,
+    scale=0.875,
+    fit to=tree]{};
+    }
+        [\tsc{deix}]
+        [\tsc{refP}
+            [\tsc{ref2}]
+            [\tsc{ref1}]
+        ]
+    ]
+    [\tsc{nom}P,
+    tikz={
+    \node[label=below:\tit{r},
+    draw,circle,
+    scale=0.9,
+    fit to=tree]{};
+    }
+        [\tsc{f1}]
+        [\tsc{num}P
+            [\tsc{num}]
+            [\tsc{m}P
+                [\tsc{m}]
+                [\tsc{n}P
+                    [\tsc{n}]
+                    [\tsc{persP}
+                        [\tsc{pers}]
+                    ]
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+
+
+show how internal-wins works
+show how external-wins does not work
+
+Florian with his am Main
+
+
+
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
+
+Internal structure of the relative clause.
+
+\tit{w} got merged as a complex spec. \tsc{f1} and \tsc{f2} ended up there via backtracking: taking \tit{w} off, spec to spec movement, and spelling it out with the suffix.
+
+\ex.
+\begin{forest} boom
+[, s sep=50mm
+    [\tsc{relP}, s sep=20mm
+        [\tit{w}, roof]
+        [, s sep=30mm
+            [\tsc{deix}P,
+            tikz={
+            \node[label=below:\tit{e},
+            draw,circle,
+            scale=0.875,
+            fit to=tree]{};
+            }
+                [\tsc{deix}]
+                [\tsc{refP}
+                    [\tsc{ref2}]
+                    [\tsc{ref1}]
+                ]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{n},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{f2}]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [\tsc{num}P
+                        [\tsc{num}]
+                        [\tsc{m}P
+                            [\tsc{m}]
+                            [\tsc{n}P
+                                [\tsc{n}]
+                                [\tsc{persP}
+                                    [\tsc{pers}]
+                                ]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+    [VP
+       [\tit{Maria mag}, roof]
+    ]
+]
+\end{forest}
+
+Structure of the relative clause + the external head that is going to be deleted.
+
+Case is merged above the relative clause. Backtracking takes place, meaning that the relative clause and the head are going to be split up again. Then it can be spelled out with the suffix of the head after spec-to-spec movement.
+
+\ex.
+\begin{forest} boom
+[\tsc{nom}P
+    [\tsc{f1}]
+        [, s sep=15mm
+        [CP
+            [\tsc{relP}
+                [\tit{w}, roof]
+                [
+                    [\tit{e}, roof]
+                    [\tit{n}, roof]
+                ]
+            ]
+            [VP
+               [\tit{Maria mag}, roof]
+            ]
+        ]
+        [, s sep=30mm
+            [\tsc{deix}P,
+        	  tikz={
+        	  \node[label=below:\tit{e},
+        	  draw,circle,
+        	  scale=0.875,
+        	  fit to=tree]{};
+            }
+                [\tsc{deix}]
+                [\tsc{refP}
+                    [\tsc{ref2}]
+                    [\tsc{ref1}]
+                ]
+            ]
+            [\tsc{num}P,
+        	  tikz={
+        	  \node[label=below:\tit{r},
+        	  draw,circle,
+        	  scale=0.9,
+        	  fit to=tree]{};
+            }
+                [\tsc{num}]
+                [\tsc{m}P
+                    [\tsc{m}]
+                    [\tsc{n}P
+                        [\tsc{n}]
+                        [\tsc{persP}
+                            [\tsc{pers}]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+\phantom{x}
 
 
 
 
-\section{External case wins}\label{sec:external-wins}
+\subsection{Deriving neither}
 
-main clause more complex: full double-headed structure, deletion of element in speccp
+Polish
 
-Why does this not happen in Modern German? no idea..
-
-\subsection{German}
-
-xx
-
-\subsection{Old High German}
-
-has attraction, so it could be derived from deletion under c-command under identity
-
-\subsection{Gothic}
-
-does not have attraction
+featural content of relative pronoun
+featural content of external head
 
 
+Polish relative pronoun
 
-\section{Excluding the third pattern}
+\begin{forest} boom
+    [, s sep=40mm
+        [XP,
+        tikz={
+        \node[label=below:\tit{k},
+        draw,circle,
+        scale=0.875,
+        fit to=tree]{};
+        }
+            [XP]
+            [\tsc{persP}
+                [\tsc{pers}]
+                [\tsc{deix}P
+                    [\tsc{deix}]
+                    [\tsc{refP}
+                        [\tsc{ref2}]
+                        [\tsc{ref1}]
+                    ]
+                ]
+            ]
+        ]
+        [, s sep=30mm
+            [\tsc{m}P,
+            tikz={
+            \node[label=below:\tit{o},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{m}]
+                [\tsc{n}P
+                    [\tsc{n}]
+                ]
+            ]
+            [\tsc{dat}P,
+            tikz={
+            \node[label=below:\tit{mu},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{f3}]
+                    [\tsc{acc}P
+                    [\tsc{f2}]
+                    [\tsc{nom}P
+                        [\tsc{f1}]
+                        [\tsc{num}P
+                            [\tsc{num}]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+\end{forest}
+
+Polish head
+
+\begin{forest} boom
+    [, s sep=30mm
+        [\tsc{pers}P,
+        tikz={
+        \node[label=below:\tit{k},
+        draw,circle,
+        scale=0.875,
+        fit to=tree]{};
+        }
+            [\tsc{pers}]
+            [\tsc{deix}P
+                [\tsc{deix}]
+                [\tsc{refP}
+                    [\tsc{ref2}]
+                    [\tsc{ref1}]
+                ]
+            ]
+        ]
+        [, s sep=20mm
+            [\tsc{m}P,
+            tikz={
+            \node[label=below:\tit{o},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{m}]
+                [\tsc{n}P
+                    [\tsc{n}]
+                ]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{go},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{f2}]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [\tsc{num}P
+                        [\tsc{num}]
+                    ]
+                ]
+            ]
+        ]
+    ]
+\end{forest}
+
+show how internal-wins does not work
+show how external-wins does not work
+
+Radek with his definitnessless of Czech demonstratives
+
+
+\subsection{Excluding external-only}
+
+
+x
+
+
 
 
 
