--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -444,14 +444,17 @@ This section discusses the situation in which only the internal case is allowed 
 
 An example of a language that shows this pattern is Modern German. In this section I discuss the Modern German data, based on the research of \citet{vogel2001}. %adapted from.. glosses translations judgements
 
-\exg. Uns besucht wer Maria mag\\
-us visits who-NOM Maria-ACC likes\\ 343
+\exg. Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
+ 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us likes Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-nom}
 
-\exg. Ich lade ein, wen auch Maria mag\\
-I invite who-ACC also Maria likes'\\ 344
+\exg. Ich lade ein, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
+ 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{acc} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
+ `I invite who Maria also like.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-acc}
 
 \exg. Ich vertraue, wem Maria gefällt\\
-I trust who-DAT Maria-ΝΟΜ pleases\\ p. 345
+ 1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} Maria.\ac{nom} please.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
+ `I trust whoever pleases Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-dat}
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. Following the internal-only requirement, only when the accusative case is the internal case, the sentence is grammatical.
 
@@ -479,13 +482,13 @@ The external case is nominative, as the predicate \tit{besuchen} `to visit' take
 The relative pronoun \tit{wen} `\ac{rel}.\ac{an}.\ac{acc}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 The example adheres to the case scale, and the more complex case (here the accusative) is the internal case, so the example is grammatical.
 
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+\exg. Uns besucht, \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{acc} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
 The example in \ref{ex:mg-nom-acc-u} is identical to \ref{ex:mg-nom-acc}, except for that the relative pronoun appears in the external less complex nominative case. This example is ungrammatical: although the internal case is more complex, the relative pronoun appears in the less complex case (the nominative) and not in the more complex case (the accusative).
 
-\exg. *Uns besucht \tbf{wer} \tbf{Maria} \tbf{mag}.\\
+\exg. *Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
  2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
 
@@ -547,13 +550,13 @@ The external case is nominative, as the predicate \tit{besuchen} `to visit' take
 The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 The example adheres to the case scale, and the more complex case (here the dative) is the internal case, so the example is grammatical.
 
-\exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
+\exg. Uns besucht, \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{dat} Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
 
 The example in \ref{ex:mg-nom-dat-u} is identical to \ref{ex:mg-nom-dat}, except for that the relative pronoun appears in the external less complex nominative case. This example is ungrammatical: although the internal case is more complex, the relative pronoun appears in the less complex case (the nominative) and not in the more complex case (the dative).
 
-\exg. *Uns besucht \tbf{wer} \tbf{Maria} \tbf{vertraut}.\\
+\exg. *Uns besucht, \tbf{wer} \tbf{Maria} \tbf{vertraut}.\\
 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat-u}
 
@@ -598,13 +601,13 @@ The external case is dative, as the predicate \tit{vertrauen} `to trust' takes d
 The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just as the main clause, showing that the relative pronoun patterns with the main clause.
 The example adheres to the case scale, but the more complex case (here the dative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
-\exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+\exg. *Ich vertraue, wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}.\\
 `I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
 
 The example in \ref{ex:mg-dat-acc-u} is identical to \ref{ex:mg-dat-acc}, except for that the relative pronoun appears in the external less complex accusative case. This example is also ungrammatical: in addition to the more complex case not being the internal case, the relative pronoun also does not appear in the more complex case (the dative) but in the less complex case (the accusative).
 
-\exg. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+\exg. *Ich vertraue, wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{acc} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}.\\
 `I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-u}
 
@@ -615,13 +618,13 @@ The external case is accusative, as the predicate \tit{einladen} `to invite' tak
 The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 The example adheres to the case scale, and the more complex case (here the dative) is the internal case, so the example is grammatical.
 
-\exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+\exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{dat} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
 `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 The example in \ref{ex:mg-acc-dat-u} is identical to \ref{ex:mg-acc-dat}, except for that the relative pronoun appears in the external less complex accusative case. This example is ungrammatical: although the internal case is more complex, the relative pronoun appears in the less complex case (the accusative) and not in the more complex case (the dative).
 
-\exg. *Ich {lade ein} \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+\exg. *Ich {lade ein}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{acc} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
 `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
 
